csk: add gitignore, more content to notebook

--- a/hypothesis_testing_overview.ipynb
+++ b/hypothesis_testing_overview.ipynb
@@ -36,11 +36,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "\n",
+    "- Formulate a binomial hypothesis test\n",
+    "- Recognize situations where the binomial distribution is applicable\n",
+    "- Define the significance level ($ \\alpha $) and its role in hypothesis\n",
+    "  testing\n",
+    "- See how\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "\n",
+    "We'll be putting distributions we've learned about to work, especially\n",
+    "the binomial and normal distributions.\n",
+    "\n",
+    "We'll also be leveraging `scipy.stats` to help us out with many of the\n",
+    "calculations.\n",
+    "\n",
+    "We'll also be taking a few liberties with the historic situation. At the\n",
+    "end, I'll leave some links to some lovely articles that describe more\n",
+    "fully the original scenario.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For further reading\n",
+    "\n",
+    "- [Ronald Fisher, a Bad Cup of Tea, and the Birth of Modern Statistics |\n",
+    "  Science History\n",
+    "  Institute](https://sciencehistory.org/stories/magazine/ronald-fisher-a-bad-cup-of-tea-and-the-birth-of-modern-statistics/)\n",
+    "\n",
+    "- [Tea for three: Of infusions and inferences and milk in first - Senn -\n",
+    "  2012 - Significance - Wiley Online\n",
+    "  Library](https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2012.00620.x)\n"
+   ]
   }
  ],
  "metadata": {
